--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -318,7 +318,6 @@ skill_zuijiazhugong: 'https://seer2-resource.yuuinih.com/sound/skill/02_1_003.mp
 skill_shouhuijinzhen: 'https://seer2-resource.yuuinih.com/sound/skill/02_1_003.mp3'
 skill_maidijinzhen: 'https://seer2-resource.yuuinih.com/sound/skill/02_2_003.mp3'
 skill_jinzhenfenmo: 'https://seer2-resource.yuuinih.com/sound/skill/02_3_002.mp3'
-# 希捷和希捷特的技能音效
 skill_shanshuo: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_002.mp3'
 skill_chuantoutuji: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_002.mp3'
 skill_xukongxiji: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_003.mp3'
@@ -334,7 +333,6 @@ skill_xuanwotuxi: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_003.mp3'
 skill_xuanwochuantou: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_003.mp3'
 skill_xuanwozhadan: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
 skill_xukongtizhi: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_001.mp3'
-# 伊特系列技能音效
 skill_tisusu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
 skill_yitelingyu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
 skill_yiteguanghuan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
@@ -445,3 +443,17 @@ skill_haishishenglou: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.m
 skill_shunxunzhiqu: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
 skill_shazhihaixiao: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
 skill_shahuangshuangshan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_rengni: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_xulchongzhuang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_pofangchongzhuang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_chentufeiyang: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_ruijian: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_manlichongzhuang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_dadihuifu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_tuijiang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_zhendangdadi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_kuangyebenteng: 'https://seer2-resource.yuuinih.com/sound/skill/10384.mp3'
+skill_dadizhiqiang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_kuangbaoxuli: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_jianguzhishen: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_yexingchongzhuang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
