--- a/data/effect_ability.yaml
+++ b/data/effect_ability.yaml
@@ -478,7 +478,6 @@
     stat: accuracy
     modifierType: delta
     value: 5
-# 拳击系列特性效果
 # 高瞻：身高超过100CM时命中率增加5%
 - id: effect_ability_increase_accuracy_5_percent_if_height_above_100
   trigger: OnBattleStart
@@ -536,7 +535,6 @@
   condition:
     type: selfUseSkill
 
-# 伊特系列特性效果
 # 速成：获得经验值提高50% (暂时使用占位符效果)
 - id: effect_ability_exp_boost_50_percent
   trigger: OnBattleStart
@@ -796,3 +794,15 @@
         - type: selectProp
           arg: evasion
     value: 5
+# 坚固: 受到的伤害减少10%
+- id: effect_ability_reduce_damage_10_percent
+  trigger: OnDamage
+  priority: 0
+  condition:
+    type: selfBeDamaged
+  apply:
+    type: addModified
+    target:
+      base: damageContext
+    delta: 0
+    percent: -10
