--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -644,7 +644,7 @@
           arg: sureHit
     value: true
 
-# 沙鹤之光: 使沙鹤之光的威力增加10%
+# 沙鹤: 使沙鹤之光的威力增加10%
 - id: effect_emblem_shahezhiguang_power_boost_10_percent
   trigger: OnBattleStart
   priority: 0
@@ -663,3 +663,37 @@
     attribute: power
     modifierType: percent
     value: 10
+
+# 大地: 使大地之墙的效果持续时间增加1回合
+- id: effect_emblem_dadiqiang_duration_boost_1
+  trigger: OnBeforeAddMark
+  priority: 0
+  apply:
+    type: setMarkDuration
+    target: addMarkContext
+    value:
+      type: dynamic
+      selector:
+        base: addMarkContext
+        chain:
+          - type: select
+            arg:
+              type: dynamic
+              arg: duration
+          - type: add
+            arg: 1
+  condition:
+    type: every
+    conditions:
+      - type: selfBeAddMark
+      - type: evaluate
+        target:
+          base: addMarkContext
+          chain:
+            - type: select
+              arg:
+                type: dynamic
+                arg: baseMark.id
+        evaluator:
+          type: same
+          value: mark_yinghua
