--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -13,7 +13,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_def_5_percent
+    - effect_skill_reduce_foe_def_1_stage_5_percent
 - id: skill_shuipao
   element: Water
   category: Special
@@ -25,7 +25,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spd_5_percent
+    - effect_skill_reduce_foe_spd_1_stage_5_percent
 - id: skill_tuoli
   element: Normal
   category: Status
@@ -122,7 +122,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spd_5_percent
+    - effect_skill_reduce_foe_spd_1_stage_5_percent
 - id: skill_feiliupubu
   element: Water
   category: Special
@@ -207,7 +207,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_atk_5_percent
+    - effect_skill_reduce_foe_atk_1_stage_5_percent
 - id: skill_huoyan
   element: Fire
   category: Special
@@ -219,7 +219,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spa_5_percent
+    - effect_skill_reduce_foe_spa_1_stage_5_percent
 - id: skill_qili
   element: Normal
   category: Status
@@ -341,7 +341,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_def_5_percent
+    - effect_skill_reduce_foe_def_1_stage_5_percent
 - id: skill_liehuofentianshao
   element: Fire
   category: Climax
@@ -594,7 +594,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spe_5_percent
+    - effect_skill_reduce_foe_spe_1_stage_5_percent
 - id: skill_zhuangji
   element: Normal
   category: Physical
@@ -606,7 +606,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_def_5_percent
+    - effect_skill_reduce_foe_def_1_stage_5_percent
 - id: skill_shouxialiuqing
   element: Normal
   category: Physical
@@ -630,7 +630,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spd_5_percent
+    - effect_skill_reduce_foe_spd_1_stage_5_percent
 - id: skill_miaozhun
   element: Normal
   category: Status
@@ -703,7 +703,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spd_10_percent
+    - effect_skill_reduce_foe_spd_1_stage_10_percent
 - id: skill_chihuanguangbo
   element: Normal
   category: Status
@@ -810,7 +810,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_def_5_percent
+    - effect_skill_reduce_foe_def_1_stage_5_percent
 - id: skill_sanyecao
   element: Grass
   category: Special
@@ -1015,7 +1015,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_atk_5_percent
+    - effect_skill_reduce_foe_atk_1_stage_5_percent
 - id: skill_zhongji
   element: Normal
   category: Physical
@@ -1027,7 +1027,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_def_5_percent
+    - effect_skill_reduce_foe_def_1_stage_5_percent
 - id: skill_bianfei
   element: Normal
   category: Status
@@ -1221,7 +1221,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spa_5_percent
+    - effect_skill_reduce_foe_spa_1_stage_5_percent
 - id: skill_genzhici
   element: Grass
   category: Special
@@ -1426,7 +1426,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_def_5_percent
+    - effect_skill_reduce_foe_def_1_stage_5_percent
 - id: skill_shuiqiang
   element: Water
   category: Special
@@ -1438,7 +1438,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spa_5_percent
+    - effect_skill_reduce_foe_spa_1_stage_5_percent
 - id: skill_ningju
   element: Normal
   category: Status
@@ -1510,7 +1510,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_def_10_percent
+    - effect_skill_reduce_foe_def_1_stage_10_percent
 - id: skill_shuiqianglianbo
   element: Water
   category: Special
@@ -1814,7 +1814,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spe_5_percent
+    - effect_skill_reduce_foe_spe_1_stage_5_percent
 - id: skill_penshui
   element: Water
   category: Special
@@ -1826,7 +1826,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spa_5_percent
+    - effect_skill_reduce_foe_spa_1_stage_5_percent
 - id: skill_mozhipao
   element: Water
   category: Special
@@ -1838,7 +1838,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spe_20_percent
+    - effect_skill_reduce_foe_spe_1_stage_20_percent
 - id: skill_kongqitianchong
   element: Normal
   category: Status
@@ -1935,7 +1935,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spa_10_percent
+    - effect_skill_reduce_foe_spa_1_stage_10_percent
 - id: skill_gaoyakongqi
   element: Normal
   category: Special
@@ -2163,7 +2163,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spa_5_percent
+    - effect_skill_reduce_foe_spa_1_stage_5_percent
 - id: skill_shuiwenzhenji
   element: Water
   category: Physical
@@ -2337,7 +2337,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spa_5_percent
+    - effect_skill_reduce_foe_spa_1_stage_5_percent
 - id: skill_jiare
   element: Fire
   category: Status
@@ -2516,7 +2516,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spa_5_percent
+    - effect_skill_reduce_foe_spa_1_stage_5_percent
 - id: skill_jianying
   element: Normal
   category: Status
@@ -2754,7 +2754,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_def_10_percent
+    - effect_skill_reduce_foe_def_1_stage_10_percent
 - id: skill_huoshanpenfa
   element: Fire
   category: Special
@@ -2766,7 +2766,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spa_10_percent
+    - effect_skill_reduce_foe_spa_1_stage_10_percent
 - id: skill_huoshanhujia
   element: Fire
   category: Status
@@ -3045,7 +3045,7 @@
   sureHit: false
   ignoreShield: false
   effect:
-    - effect_skill_reduce_foe_def_10_percent
+    - effect_skill_reduce_foe_def_1_stage_10_percent
   tags: []
 - id: skill_shuimo
   element: Water
@@ -3069,7 +3069,7 @@
   sureHit: false
   ignoreShield: false
   effect:
-    - effect_skill_reduce_foe_spa_10_percent
+    - effect_skill_reduce_foe_spa_1_stage_10_percent
   tags: []
 - id: skill_wuyi
   element: Normal
@@ -3093,7 +3093,7 @@
   sureHit: false
   ignoreShield: false
   effect:
-    - effect_skill_reduce_foe_spa_15_percent
+    - effect_skill_reduce_foe_spa_1_stage_15_percent
   tags: []
 - id: skill_xuanzhuanchongfeng
   element: Normal
@@ -3105,7 +3105,7 @@
   sureHit: false
   ignoreShield: false
   effect:
-    - effect_skill_reduce_foe_def_15_percent
+    - effect_skill_reduce_foe_def_1_stage_15_percent
   tags: []
 - id: skill_chaoliupo
   element: Water
@@ -3129,7 +3129,7 @@
   sureHit: false
   ignoreShield: false
   effect:
-    - effect_skill_reduce_foe_def_20_percent
+    - effect_skill_reduce_foe_def_1_stage_20_percent
   tags: []
 - id: skill_jushuipao
   element: Water
@@ -3141,7 +3141,7 @@
   sureHit: false
   ignoreShield: false
   effect:
-    - effect_skill_reduce_foe_spa_20_percent
+    - effect_skill_reduce_foe_spa_1_stage_20_percent
   tags: []
 - id: skill_nongsuoshuimo
   element: Water
@@ -3337,7 +3337,7 @@
   sureHit: false
   ignoreShield: false
   effect:
-    - effect_skill_clear_foe_atk_spa_buff
+    - effect_skill_clear_foe_atk_spa_stage
   tags: []
 - id: skill_bingqilin
   element: Normal
@@ -3349,7 +3349,7 @@
   sureHit: false
   ignoreShield: false
   effect:
-    - effect_skill_clear_foe_spe_buff
+    - effect_skill_clear_foe_spe_stage
   tags: []
 - id: skill_qiaokeli
   element: Normal
@@ -3361,7 +3361,7 @@
   sureHit: false
   ignoreShield: false
   effect:
-    - effect_skill_clear_foe_def_spd_buff
+    - effect_skill_clear_foe_def_spd_stage
   tags: []
 - id: skill_aideminyi
   element: Psychic
@@ -3711,7 +3711,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spd_5_percent
+    - effect_skill_reduce_foe_spd_1_stage_5_percent
 - id: skill_maimaijinzhen
   element: Grass
   category: Special
@@ -4180,8 +4180,8 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_def_20_percent
-    - effect_skill_reduce_foe_spd_20_percent
+    - effect_skill_reduce_foe_def_1_stage_20_percent
+    - effect_skill_reduce_foe_spd_1_stage_20_percent
 - id: skill_fengzhilingyu
   element: Wind
   category: Status
@@ -4439,7 +4439,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spe_20_percent
+    - effect_skill_reduce_foe_spe_1_stage_20_percent
 - id: skill_bingzhilingyu
   element: Ice
   category: Status
@@ -4767,7 +4767,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_add_mark_houkongfan # TODO: 使自身获得后空翻
+    - effect_skill_add_mark_houkongfan
 - id: skill_huixingquan
   element: Normal
   category: Physical
@@ -5175,7 +5175,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spe_20_percent
+    - effect_skill_reduce_foe_spe_1_stage_20_percent
 - id: skill_liuxingdun
   element: Ground
   category: Status
@@ -5236,7 +5236,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spe_5_percent
+    - effect_skill_reduce_foe_spe_1_stage_5_percent
 - id: skill_shahezhiguang
   element: Desert
   category: Special
@@ -5379,3 +5379,169 @@
   ignoreShield: false
   multihit: 2
   tags: []
+- id: skill_rengni
+  element: Ground
+  category: Special
+  target: opponent
+  power: 55
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_1_stage_5_percent
+- id: skill_xulchongzhuang
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 65
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_xuli_1
+- id: skill_pofangchongzhuang
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_clear_foe_def_spd_stage
+- id: skill_chentufeiyang
+  element: Ground
+  category: Special
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+- id: skill_ruijian
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_atk_1_stage
+- id: skill_manlichongzhuang
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 85
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_1_stage_10_percent
+- id: skill_dadihuifu
+  element: Ground
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_heal_self_quarter
+- id: skill_tuijiang
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spa_1_stage
+- id: skill_zhendangdadi
+  element: Ground
+  category: Special
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spd_1_stage_10_percent
+- id: skill_kuangyebenteng
+  element: Ground
+  category: Climax
+  target: opponent
+  power: 160
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_1_stage
+- id: skill_dadizhiqiang
+  element: Ground
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_yinghua_50
+- id: skill_kuangbaoxuli
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 35
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_xuli_5
+- id: skill_jianguzhishen
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_mianyiruohua
+- id: skill_yexingchongzhuang
+  element: Ground
+  category: Physical
+  target: opponent
+  power: 120
+  rage: 25
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_1_stage_15_percent
