--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -457,3 +457,16 @@ skill_dadizhiqiang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3
 skill_kuangbaoxuli: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
 skill_jianguzhishen: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
 skill_yexingchongzhuang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_suike: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_shazhidanke: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_dankechongji: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_shazhisuike: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_yingkezhuangji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_feisha: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_shazhijiao: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_shachendanke: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_shabaoqixuan: 'https://seer2-resource.yuuinih.com/sound/skill/10411.mp3'
+skill_dankebaohu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_tunshidanke: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_shalianjiao: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_kuaisufeisha: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
