--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -5545,3 +5545,162 @@
   tags: []
   effect:
     - effect_skill_reduce_foe_def_1_stage_15_percent
+- id: skill_suike
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 55
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spd_1_stage_5_percent
+- id: skill_shazhidanke
+  element: Desert
+  category: Special
+  target: self
+  power: 65
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shazhidanke
+- id: skill_dankechongji
+  element: Desert
+  category: Physical
+  target: opponent
+  power: 50
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: ['consume_shazhidanke']
+  multihit: 2
+  effect:
+    - effect_skill_add_multihit_1_consume_shazhidanke
+- id: skill_shazhisuike
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 25
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: ['consume_shazhidanke']
+  multihit: [2, 4]
+  effect:
+    - effect_skill_add_power_10_consume_shazhidanke
+- id: skill_yingkezhuangji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 15
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_clear_foe_def_spd_stage
+- id: skill_feisha
+  element: Desert
+  category: Special
+  target: opponent
+  power: 70
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_mingzhongxiajiang_15
+- id: skill_shazhijiao
+  element: Desert
+  category: Physical
+  target: opponent
+  power: 95
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_clear_foe_def_spd_stage
+- id: skill_shachendanke
+  element: Desert
+  category: Special
+  target: opponent
+  power: 115
+  rage: 25
+  accuracy: 70
+  sureHit: false
+  ignoreShield: false
+  tags: ['consume_shazhidanke']
+  effect:
+    - effect_skill_sure_hit_consume_shazhidanke
+- id: skill_shabaoqixuan
+  element: Desert
+  category: Climax
+  target: opponent
+  power: 160
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spd_1_stage_10_percent
+- id: skill_dankebaohu
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_mianyiruohua
+- id: skill_tunshidanke
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_heal_self_120_hp_if_consecutive_half
+- id: skill_shalianjiao
+  element: Desert
+  category: Physical
+  target: opponent
+  power: 55
+  rage: 20
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  multihit: 2
+  effect:
+    - effect_skill_clear_foe_def_spd_stage
+- id: skill_kuaisufeisha
+  element: Desert
+  category: Special
+  target: opponent
+  power: 50
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: ['consume_shazhidanke']
+  effect:
+    - effect_skill_add_priority_1_consume_shazhidanke
