--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -161,3 +161,4 @@ mark_shahezhili: 'https://seer2-resource.yuuinih.com/png/markImage/3079.png'
 mark_shazhiwang: 'https://seer2-resource.yuuinih.com/png/markImage/3080.png'
 mark_shanghaizengjia: 'https://seer2-resource.yuuinih.com/png/markImage/3016.png'
 mark_xuli: 'https://seer2-resource.yuuinih.com/png/markImage/3073.png'
+mark_shazhidanke: 'https://seer2-resource.yuuinih.com/png/markImage/3075.png'
