--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -394,6 +394,7 @@ skill_bandao: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
 skill_houkongfan: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
 skill_huixingquan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
 skill_baiguangpao: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_xiaoruo: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
 skill_ziguangpao: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
 skill_suixingquan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
 skill_xingchensuiquan: 'https://seer2-resource.yuuinih.com/sound/skill/10285.mp3'
